# zero-knowledge-gadgets

./: Cargo.toml  rust-toolchain.toml
arkworks/native-gadgets/: Cargo.toml
arkworks/native-gadgets/src/: lib.rs  merkle_tree.rs
arkworks/r1cs-gadgets/: Cargo.toml
arkworks/utils/: Cargo.toml
