[workspace]

members = [
    "arkworks/native-gadgets",
    # R1CS gadgets + circuits
    # "arkworks/r1cs-circuits",
    "arkworks/r1cs-gadgets",
    # Utils and setups
    "arkworks/utils",
]

exclude = [
    "arkworks/r1cs-circuits",
    "arkworks/plonk-hashing",
    "arkworks/plonk-gadgets",
    "arkworks/plonk-circuits",
    "arkworks/setups",
    "arkworks/benchmarks",
]

[patch.crates-io]
hashbrown = { version = "0.13.0", git = "https://github.com/rust-lang/hashbrown.git", tag = "v0.13.1" }
ahash = { version = "0.8.0", git = "https://github.com/tkaitchuck/aHash.git", tag = "v0.8.0" }
